--- a/style.css
+++ b/style.css
@@ -19,9 +19,9 @@ button:hover {
 
 #textcentral {
   background-color: #514988;
-  width: 85%;
+  width: 105%;
 }
-
+/* text central --> texto ao lado esquerdo*/
 #textcentral h1 {
   font-size: 60px;
   text-align: center;
@@ -32,34 +32,81 @@ button:hover {
   font-size: 30px;
   text-align: center;
   padding-top: 15px;
+  margin-bottom: 90px;
+  color: #ffff;
 }
+#textcentral p {
+  font-size: 29px;
+  font-weight: 400px;
+  text-align: center;
+  margin-bottom: 90px;
+  color: #ffff;
+}
+/* centro mantem a imagem quebrada, lado video lado texto*/
 #centro {
   display: grid;
   grid-auto-flow: column;
 }
 
-#textcentral p {
-  font-size: 29px;
-  font-weight: 400px;
-  text-align: center;
-}
-
 .tempo {
   text-align: center;
-  padding-right: 40%;
+  padding-right: 20px;
+}
+#subtempo h1 {
+  color: #e33881;
+  padding-bottom: 16px;
 }
 #timer {
   display: grid;
   display: flex;
-  padding-top: 30px;
-  padding-left: 60px;
-  font-size: 30px;
-  letter-spacing: 9px;
+  padding: 20px 0px 0px 258px;
+  font-size: 40px;
 }
 #timer h1 {
   color: #514988;
 }
-#video {
-  padding-top: 100px;
-  padding-right: 100px;
+#dia {
+  padding-right: 30px;
+}
+#hora {
+  padding-right: 30px;
+}
+#minuto {
+  padding-right: 30px;
+}
+#segundo {
+  padding-right: 30px;
+}
+
+.ingressos {
+  display: grid;
+  grid-auto-flow: column;
+  width: 93%;
+  padding: 30px 0px 80px 0px;
+}
+.rodapee {
+  font-size: 19px;
+  padding: 30px 20px 0px 100px;
+  color: #ffd900;
+}
+.ingressos button {
+  width: 500px;
+  height: 150px;
+  border-radius: 30px;
+  border: none;
+  align-items: center;
+  background-color: #514988;
+  color: #ffff;
+  font-size: 50px;
+}
+#botao {
+  padding: 30px 0px 80px 100px;
+  transition: all, 0, 6s;
+}
+#botao :hover {
+  background: transparent;
+  background-color: #2c2849f0;
+  transform: scale(1.3) rotate(360deg);
+  box-shadow: 0 0 60px #4d4580f0;
+  cursor: grab;
 }
