--- a/style.css
+++ b/style.css
@@ -124,3 +124,6 @@ button:hover {
   box-shadow: 0 0 60px #4d4580f0;
   cursor: grab;
 }
+.card-hightLight {
+  box-shadow: 10px 10px 5px 5px grey;
+}
