--- a/style.css
+++ b/style.css
@@ -125,5 +125,8 @@ button:hover {
   cursor: grab;
 }
 .card-hightLight {
-  box-shadow: 10px 10px 5px 5px grey;
+  box-shadow: 10px 10px 10px 10px grey;
+}
+.card-selected {
+  border: 5px solid green;
 }
